# opensim-domu

./: CMakeLists.txt  README.md
OpenSim/Extension/Analyses/: DistanceKinematics.cpp  DistanceKinematics.h  DistanceKinematicsIMU.cpp  DistanceKinematicsIMU.h  RegisterTypes_osimAnalyses.cpp  RegisterTypes_osimAnalyses.h  osimAnalyses.h  osimAnalysesDLL.cpp  osimAnalysesDLL.h
OpenSim/Extension/Common/: DistanceBaseDataReader.cpp  DistanceBaseDataReader.h  DistanceDataReader.cpp  DistanceDataReader.h  DistanceDataReaderSettings.h  RegisterTypes_osimCommon.cpp  RegisterTypes_osimCommon.h  osimCommon.h  osimCommonDLL.cpp  osimCommonDLL.h
OpenSim/Extension/Simulation/: AssemblySolverExt.cpp  AssemblySolverExt.h  DistancesReference.cpp  DistancesReference.h  InverseKinematicsSolverExt.cpp  InverseKinematicsSolverExt.h  InverseKinematicsSolverKF.cpp  InverseKinematicsSolverKF.h  RegisterTypes_osimSimulation.cpp  RegisterTypes_osimSimulation.h  osimSimulation.h  osimSimulationDLL.cpp  osimSimulationDLL.h
OpenSim/Extension/Simulation/OpenSense/: IMUPlacerExt.cpp  IMUPlacerExt.h
OpenSim/Extension/Tools/: DistanceInverseKinematicsTool.cpp  DistanceInverseKinematicsTool.h  GenericModelMaker.cpp  GenericModelMaker.h  KFComboInverseKinematicsTool.cpp  KFComboInverseKinematicsTool.h  MarkerPair.cpp  MarkerPair.h  Measurement.h  ModelScaler.cpp  ModelScaler.h  RegisterTypes_osimTools.cpp  RegisterTypes_osimTools.h  ScaleTool.cpp  ScaleTool.h  osimTools.h  osimToolsDLL.cpp
Simbody/include/simbody/internal/: AssemblerExt.h  AssemblyConditionExt.h  AssemblyCondition_DistanceSensors.h
Simbody/src/: AssemblerExt.cpp  AssemblyCondition_DistanceSensors.cpp
app/: processBulkC3D.cpp  processBulkTrials.cpp  processSingleTrial.cpp  processTrialCollection.cpp  runSingleTrial.cpp
data/: Rajagopal2016.osim  all-trials-subset.csv  all-trials.csv  gait2392_thelen2003muscle.osim  info_participants.csv  kg_IK_Tasks_uniform.xml  kg_IK_Tasks_weighted.xml  kg_Scale_MarkerSet.xml  kg_Setup_Scale.xml  myDOMUMappingsSensor.xml  myDOMUMappingsSensor_torso.xml  setup_DistanceWeightSet_all_downweight.xml  setup_DistanceWeightSet_all_uniform.xml  setup_DistanceWeightSet_downweighted_pelvis_tibia_calcn.xml  setup_DistanceWeightSet_pelvis_tibia_calcn_uniform.xml  setup_MarkerInverseKinematics.xml  setup_OrientationWeightSet_downweighted.xml  setup_OrientationWeightSet_downweighted_pelvis_tibia_calcn.xml  setup_OrientationWeightSet_pelvis_tibia_calcn.xml  setup_OrientationWeightSet_uniform.xml
lib/: IKRunner.cpp  IKRunner.h  ModelEditor.cpp  ModelEditor.h  Participant.h  SingleTrial.cpp  SingleTrial.h  Utils.cpp  Utils.h
preprocessing/: imu_extract.m
